# LUNA-V8

./: .gitignore  SETUP.md  STATO_PROGETTO.md  avvio comfyui.txt  chat.py  pyproject.toml  run_game.bat  run_game_debug.bat
config/: comfy_workflow_image.json  comfy_workflow_video.json
docs/: DETTAGLIO_COMPLETO_E_MAPPING.md  EVENTI_CORE_NPC_E_COMPANION_SOLUZIONI.md  LUNA_V8_SPEC.md  NPC_IMMERSION_IMPLEMENTATION.md  POKER_DIALOGUE_IMPLEMENTAZIONE.md  POKER_UI_VIDEO_E_PULSANTI.md  REPORT_MEMORIA_NPC_COMPANION.md  SCHOOL_LIFE_COMPLETE_ERRORI_E_SOLUZIONI.md  V8_PROGRESS.md  missioni_ed_eventi_school_life_complete.txt  ui_missioni_ed_eventi_modifiche_hud.md
src/luna/: __init__.py  __main__.py
tests/: check_models.py  test_beat_integration.py  test_core_systems.py  test_env.py  test_gm_agenda.py  test_initiative_telemetry.py  test_media_builders.py  test_multi_npc.py  test_narrative_coherence.py  test_quest_coherence.py  test_story_beats.py  test_v7_systems.py  test_white_pantyhose.py
tests/core/: CORE_ENGINE_QUICK_REF.md  CORE_ENGINE_TESTING.md  test_core_engine_complete.py
tests/unit/: test_json_repair.py  test_schedule_manager.py
tests/verifica/: QUICK_START_TESTING.md  README.md  TESTING_STRATEGY_V8.md  conftest.py  pytest.ini  setup_test_environment.sh  test_poker_engine_example.py
worlds/prehistoric_tribe/: _meta.yaml  daily_events.yaml  kara.yaml  naya.yaml  npc_templates.yaml  tension_config.yaml  time.yaml  zara.yaml
worlds/school_life_complete/: _meta.yaml  companion_schedules.yaml  global_events.yaml  locations.yaml  luna.yaml  maria.yaml  stella.yaml  (+3 more)
(+182 files in other folders)
